# network-live

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
network_live/: __init__.py  sql.py
network_live/enm/: __init__.py  enm_cli.py  parser.py  parser_utils.py
network_live/enm/iot/: __init__.py  iot_enm_cli.py  iot_main.py  iot_parser.py  iot_sql.py
network_live/enm/nr/: __init__.py  nr_enm_cli.py  nr_main.py  nr_parser.py  nr_sql.py
network_live/scripts/: __init__.py  update_enm_iot.py  update_enm_nr.py
tests/: __init__.py
tests/enm/: conftest.py  test_nr_parser.py  test_parser.py
